--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="pref_summary_currency">Default currency symbol</string>
     <string name="title_activity_settings">Settings</string>
     <string name="number_format">Number Format</string>
-    <string name="pref_summary_number_format">Format for Numbers. See Java NumberFormats</string>
+    <string name="pref_summary_number_format">Format for Numbers.</string>
     <string name="date_format">Date Format</string>
     <string name="pref_summary_date_format">Format for dates</string>
     <string name="default_account1">Default Account 1</string>
@@ -20,13 +20,13 @@
     <string name="account2">Account 2</string>
     <string name="templates">Templates</string>
     <string name="accounts">Accounts</string>
-    <string name="dummy1">Dummy 1</string>
-    <string name="dummy2">Dummy 2</string>
+    <string name="dummy1">User 1</string>
+    <string name="dummy2">User 2</string>
     <string name="openDrawer">Open</string>
     <string name="closeDrawer">Close</string>
     <string name="account_not_deleted">Could not delete accounts.</string>
     <string name="accounts_deleted">Accounts deleted.</string>
-    <string name="account_not_found">Account  not found</string>
+    <string name="account_not_found">Account not found</string>
     <string name="account_constraint">Account is used in entries</string>
-    <string name="item_processed">Items marked as processed.</string>
+    <string name="item_processed">Successfully deleted.</string>
 </resources>
